# Heic_to_Jpg_Converter

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  converter_core.cpp  converter_core.h  heic_converter  heic_converter.c  heic_converter_mt.cpp
.github/workflows/: build.yml
gui/: main.cpp
packaging/: Convert.bat  Convert.command  README-macos.txt  README-windows.txt
scripts/: build_static.sh
